--- a/src/ReservoirDevs.Common.Extensions/ReservoirDevs.Common.Extensions.csproj
+++ b/src/ReservoirDevs.Common.Extensions/ReservoirDevs.Common.Extensions.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.2" />
+    <PackageReference Include="Microsoft.CodeCoverage" Version="16.6.1" />
   </ItemGroup>
 
 </Project>
