--- a/src/ReservoirDevs.Common.Extensions/ReservoirDevs.Common.Extensions.csproj
+++ b/src/ReservoirDevs.Common.Extensions/ReservoirDevs.Common.Extensions.csproj
@@ -5,8 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.4" />
-    <PackageReference Include="Microsoft.CodeCoverage" Version="16.6.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.*" />
+    <PackageReference Include="Microsoft.CodeCoverage" Version="16.*" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.*" />
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.*" />
+    <PackageReference Include="System.Buffers" Version="4.*" />
   </ItemGroup>
 
 </Project>
