--- a/src/ReservoirDevs.FeatureManagement/ReservoirDevs.FeatureManagement.csproj
+++ b/src/ReservoirDevs.FeatureManagement/ReservoirDevs.FeatureManagement.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.4" />
-    <PackageReference Include="Microsoft.FeatureManagement" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.*" />
+    <PackageReference Include="Microsoft.FeatureManagement" Version="2.*" />
   </ItemGroup>
 
 </Project>
