--- a/src/ReservoirDevs.Common.Extensions/ReservoirDevs.Common.Extensions.csproj
+++ b/src/ReservoirDevs.Common.Extensions/ReservoirDevs.Common.Extensions.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageLicenseFile>LICENCE.txt</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +12,13 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.*" />
     <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.*" />
     <PackageReference Include="System.Buffers" Version="4.*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\licences\MIT\LICENCE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
