--- a/src/ReservoirDevs.Common.Models/ReservoirDevs.Common.Models.csproj
+++ b/src/ReservoirDevs.Common.Models/ReservoirDevs.Common.Models.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageLicenseFile>LICENCE.txt</PackageLicenseFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="..\..\licences\MIT\LICENCE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 </Project>
