--- a/src/ReservoirDevs.FeatureManagement/ReservoirDevs.FeatureManagement.csproj
+++ b/src/ReservoirDevs.FeatureManagement/ReservoirDevs.FeatureManagement.csproj
@@ -2,9 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageLicenseFile>LICENCE.txt</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\..\licences\MIT\LICENCE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.*" />
     <PackageReference Include="Microsoft.FeatureManagement" Version="2.*" />
   </ItemGroup>
